DAR-266: fix horizontal scroll bar appearing when layout is fluid.

--- a/skins/oasis/css/core/responsive.scss
+++ b/skins/oasis/css/core/responsive.scss
@@ -3,6 +3,16 @@
 
 $width-padding: $width-gutter / 2;
 
+.AccountNavigation {
+	overflow: hidden;
+}
+
+.oasis-split-skin {
+	.WikiaHeader {
+		min-width: auto;
+	}
+}
+
 .WikiaActivityModule li em {
 	width: auto;
 }
